<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_gravity="right"
    tools:openDrawer="right">

    <include
        layout="@layout/app_bar_traffic_first_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        app:itemTextColor="@android:color/white"
        app:itemIconTint="@android:color/white"
        app:itemIconSize="10sp"
        android:background="@drawable/side_nav_bar"
        >





        <ScrollView
            android:layout_marginBottom="20dp"
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/powerd_by"
            android:fontFamily="@font/popins_regular"
            android:layout_marginTop="50dp"
            android:text="Powered By"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <ImageView
            android:id="@+id/image_cover"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/traffic2"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/powerd_by"
            android:layout_width="match_parent"
            android:layout_height="100dp">
        </ImageView>

    <LinearLayout
        android:id="@+id/linear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/image_cover"
        >

    <LinearLayout
        android:id="@+id/nav_incident"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/mnumark"
            android:layout_width="10dp"
            android:layout_height="10dp">
        </ImageView>

        <TextView
            android:textColor="@android:color/white"
            android:text="Incidents"
            android:fontFamily="@font/popins_medium"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>

        <LinearLayout
        android:id="@+id/nav_roadworks"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/mnumark"
            android:layout_width="10dp"
            android:layout_height="10dp">
        </ImageView>

        <TextView
            android:textColor="@android:color/white"
            android:fontFamily="@font/popins_medium"
            android:text="Road Works"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>


        <LinearLayout

            android:id="@+id/nav_plannedRoadWork"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/mnumark"
                android:layout_width="10dp"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:fontFamily="@font/popins_medium"
                android:textColor="@android:color/white"
                android:text="Planned Road Works"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/nv_near_me"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/mnumark"
                android:layout_width="10dp"
                android:layout_height="10dp">
            </ImageView>

            <TextView
                android:fontFamily="@font/popins_medium"
                android:textColor="@android:color/white"
                android:text="@string/Near_me"
                android:textSize="12sp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="260dp">


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/nearmelin"
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/nearme_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/five_miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/_5"
                android:textSize="15sp">

            </RadioButton>

            <RadioButton
                android:id="@+id/ten_miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/_10"
                android:textSize="15sp">

            </RadioButton>


            <RadioButton
                android:id="@+id/fifteen_miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/_15"
                android:textSize="15sp">

            </RadioButton>

            <RadioButton
                android:id="@+id/twenty_miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/_20"
                android:textSize="15sp">

            </RadioButton>

            <RadioButton
                android:id="@+id/twenty_five_miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/_25"
                android:textSize="15sp">

            </RadioButton>

            <RadioButton
                android:id="@+id/fifty_miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/_50"
                android:textSize="15sp">

            </RadioButton>

            <RadioButton
                android:id="@+id/hundred_miles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/_100"
                android:textSize="15sp">

            </RadioButton>

            <RadioButton
                android:id="@+id/all_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:textColor="@android:color/white"
                android:text="@string/all_events"
                android:textSize="15sp">

            </RadioButton>
        </RadioGroup>


    </LinearLayout>

    </ScrollView>

</RelativeLayout>
        </ScrollView>


        <TextView
            android:background="@android:color/transparent"
            android:id="@+id/bottomtext"
            android:layout_below="@+id/scroll"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/Powered_by"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="italic">
        </TextView>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
